@@ -3,16 +3,18 @@ package com.envisionad.webservice.reservation.businesslogiclayer;
 import com.envisionad.webservice.advertisement.dataaccesslayer.AdCampaign;
 import com.envisionad.webservice.advertisement.dataaccesslayer.AdCampaignIdentifier;
 import com.envisionad.webservice.advertisement.dataaccesslayer.AdCampaignRepository;
+import com.envisionad.webservice.business.dataaccesslayer.Business;
+import com.envisionad.webservice.business.dataaccesslayer.BusinessIdentifier;
+import com.envisionad.webservice.business.dataaccesslayer.BusinessRepository;
 import com.envisionad.webservice.media.DataAccessLayer.Media;
+import com.envisionad.webservice.media.DataAccessLayer.MediaLocation;
 import com.envisionad.webservice.media.DataAccessLayer.MediaRepository;
 import com.envisionad.webservice.media.exceptions.MediaNotFoundException;
-import com.envisionad.webservice.reservation.dataaccesslayer.Reservation;
-import com.envisionad.webservice.reservation.dataaccesslayer.ReservationRepository;
-import com.envisionad.webservice.reservation.dataaccesslayer.ReservationStatus;
+import com.envisionad.webservice.reservation.dataaccesslayer.*;
 import com.envisionad.webservice.reservation.datamapperlayer.ReservationResponseMapper;
-import com.envisionad.webservice.reservation.exceptions.BadReservationRequestException;
 import com.envisionad.webservice.reservation.exceptions.ReservationAlreadyProcessedException;
 import com.envisionad.webservice.reservation.exceptions.ReservationNotFoundException;
+import com.envisionad.webservice.reservation.presentationlayer.models.DenialDetailsRequestModel;
 import com.envisionad.webservice.reservation.presentationlayer.models.ReservationResponseModel;
 import com.envisionad.webservice.utils.JwtUtils;
 import org.junit.jupiter.api.BeforeEach;
@@ -41,6 +43,7 @@ class ReservationServiceImplUnitTest {
     @Mock private AdCampaignRepository adCampaignRepository;
     @Mock private ReservationResponseMapper reservationResponseMapper;
     @Mock private MediaRepository mediaRepository;
+    @Mock private BusinessRepository businessRepository;
     @Mock private JwtUtils jwtUtils;
 
     private Jwt mediaToken;
@@ -217,7 +220,7 @@ class ReservationServiceImplUnitTest {
     }
 
     @Test
-    void updateReservationStatus_whenValidPending_shouldApprove() {
+    void approveReservation_whenValidPending_shouldApprove() {
         // Arrange
         String mediaId = UUID.randomUUID().toString();
         String resId = "res-123";
@@ -231,8 +234,7 @@ class ReservationServiceImplUnitTest {
         when(reservationResponseMapper.entityToResponseModel(any())).thenReturn(new ReservationResponseModel());
 
         // Act
-        ReservationResponseModel result = reservationService.updateReservationStatus(
-                mediaToken, mediaId, resId, ReservationStatus.APPROVED);
+        ReservationResponseModel result = reservationService.approveReservation(mediaToken, mediaId, resId);
 
         // Assert
         assertNotNull(result);
@@ -241,16 +243,16 @@ class ReservationServiceImplUnitTest {
     }
 
     @Test
-    void updateReservationStatus_whenMediaNotFound_shouldThrowException() {
+    void approveReservation_whenMediaNotFound_shouldThrowException() {
         String mediaId = UUID.randomUUID().toString();
         when(mediaRepository.findById(UUID.fromString(mediaId))).thenReturn(Optional.empty());
 
         assertThrows(MediaNotFoundException.class, () ->
-                reservationService.updateReservationStatus(mediaToken, mediaId, "any", ReservationStatus.APPROVED));
+                reservationService.approveReservation(mediaToken, mediaId, "any"));
     }
 
     @Test
-    void updateReservationStatus_whenAlreadyProcessed_shouldThrowException() {
+    void approveReservation_whenAlreadyProcessed_shouldThrowException() {
         String mediaId = UUID.randomUUID().toString();
         stubMediaLookup(mediaId);
 
@@ -259,26 +261,14 @@ class ReservationServiceImplUnitTest {
         when(reservationRepository.findByReservationId("res-123")).thenReturn(Optional.of(reservation));
 
         assertThrows(ReservationAlreadyProcessedException.class, () ->
-                reservationService.updateReservationStatus(mediaToken, mediaId, "res-123", ReservationStatus.APPROVED));
-    }
-
-    @Test
-    void updateReservationStatus_whenSettingInvalidStatus_shouldThrowException() {
-        String mediaId = UUID.randomUUID().toString();
-        stubMediaLookup(mediaId);
-
-        Reservation reservation = new Reservation();
-        reservation.setStatus(ReservationStatus.PENDING);
-        when(reservationRepository.findByReservationId("res-123")).thenReturn(Optional.of(reservation));
-
-        assertThrows(BadReservationRequestException.class, () ->
-                reservationService.updateReservationStatus(mediaToken, mediaId, "res-123", ReservationStatus.PENDING));
+                reservationService.approveReservation(mediaToken, mediaId, "res-123"));
     }
 
     @Test
     void getAllReservationByMediaOwnerBusinessId_shouldFilterAndPopulateNames() {
         // Arrange
         String myBusinessId = UUID.randomUUID().toString();
+        String advertiserBusinessId = UUID.randomUUID().toString();
         UUID mediaId = UUID.randomUUID();
 
         // Reservation 1: Belongs to my business
@@ -295,26 +285,51 @@ class ReservationServiceImplUnitTest {
         // Mock Media lookup for the filter
         Media myMedia = new Media();
         myMedia.setBusinessId(UUID.fromString(myBusinessId));
+        when(mediaRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
         when(mediaRepository.findById(mediaId)).thenReturn(Optional.of(myMedia));
+
+        Media enrichedMedia = new Media();
+        enrichedMedia.setId(mediaId);
+        enrichedMedia.setTitle("Campus Board");
+        MediaLocation location = new MediaLocation();
+        location.setCity("Montreal");
+        enrichedMedia.setMediaLocation(location);
+        when(mediaRepository.findAllByIdWithLocation(anyList())).thenReturn(List.of(enrichedMedia));
 
         // Mock mapping and Campaign lookup
         ReservationResponseModel model = new ReservationResponseModel();
+        model.setMediaId(mediaId.toString());
         model.setCampaignId("camp-1");
-        when(reservationResponseMapper.entityToResponseModel(r1)).thenReturn(model);
+        when(reservationResponseMapper.entitiesToResponseModelList(anyList()))
+                .thenReturn(List.of(model));
 
         AdCampaign campaign = mock(AdCampaign.class);
         AdCampaignIdentifier capId = new AdCampaignIdentifier("camp-1");
         when(campaign.getCampaignId()).thenReturn(capId);
+        BusinessIdentifier campaignBusinessId = mock(BusinessIdentifier.class);
+        when(campaignBusinessId.getBusinessId()).thenReturn(advertiserBusinessId);
+        when(campaign.getBusinessId()).thenReturn(campaignBusinessId);
         when(campaign.getName()).thenReturn("Verified Campaign");
         when(adCampaignRepository.findAllByCampaignId_CampaignIdIn(anyList())).thenReturn(List.of(campaign));
+
+        Business advertiserBusiness = new Business();
+        advertiserBusiness.setBusinessId(new BusinessIdentifier(advertiserBusinessId));
+        advertiserBusiness.setName("Champlain College");
+        when(businessRepository.findAllByBusinessId_BusinessIdIn(anyList()))
+                .thenReturn(List.of(advertiserBusiness));
 
         // Act
         List<ReservationResponseModel> result = reservationService.getAllReservationByMediaOwnerBusinessId(mediaToken, myBusinessId);
 
         // Assert
         assertEquals(1, result.size());
-        assertEquals("Verified Campaign", result.get(0).getCampaignName());
+        assertEquals("Verified Campaign", result.getFirst().getCampaignName());
+        assertEquals("Campus Board", result.getFirst().getMediaTitle());
+        assertEquals("Montreal", result.getFirst().getMediaCity());
+        assertEquals("Champlain College", result.getFirst().getAdvertiserBusinessName());
         verify(jwtUtils).validateUserIsEmployeeOfBusiness(mediaToken, myBusinessId);
+        verify(mediaRepository).findAllByIdWithLocation(anyList());
+        verify(businessRepository).findAllByBusinessId_BusinessIdIn(anyList());
     }
 
     @Test
@@ -328,15 +343,14 @@ class ReservationServiceImplUnitTest {
     }
 
     @Test
-    void updateReservationStatus_whenReservationNotFound_shouldThrowException() {
+    void approveReservationStatus_whenReservationNotFound_shouldThrowException() {
         String mediaId = UUID.randomUUID().toString();
         String resId = "non-existent-res";
         stubMediaLookup(mediaId);
 
         when(reservationRepository.findByReservationId(resId)).thenReturn(Optional.empty());
 
-        assertThrows(ReservationNotFoundException.class, () ->
-                reservationService.updateReservationStatus(mediaToken, mediaId, resId, ReservationStatus.APPROVED));
+        assertThrows(ReservationNotFoundException.class, () -> reservationService.approveReservation(mediaToken, mediaId, resId));
     }
 
     @Test
@@ -348,6 +362,7 @@ class ReservationServiceImplUnitTest {
         when(reservationRepository.findAll()).thenReturn(List.of(r1));
         // Simulate media record being missing from DB
         when(mediaRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
+        when(reservationResponseMapper.entitiesToResponseModelList(anyList())).thenReturn(List.of());
 
         List<ReservationResponseModel> result = reservationService.getAllReservationByMediaOwnerBusinessId(mediaToken, myBusinessId);
 
@@ -356,17 +371,21 @@ class ReservationServiceImplUnitTest {
     }
 
     @Test
-    void updateReservationStatus_whenValidPending_shouldReject() {
+    void denyReservation_whenValidPending_shouldReject() {
         String mediaId = UUID.randomUUID().toString();
         String resId = "res-456";
         stubMediaLookup(mediaId);
 
         Reservation reservation = new Reservation();
         reservation.setStatus(ReservationStatus.PENDING);
+        DenialDetailsRequestModel details = new DenialDetailsRequestModel();
+        details.setReason(DenialReason.OTHER);
+        details.setDescription("test");
+
         when(reservationRepository.findByReservationId(resId)).thenReturn(Optional.of(reservation));
         when(reservationResponseMapper.entityToResponseModel(any())).thenReturn(new ReservationResponseModel());
 
-        reservationService.updateReservationStatus(mediaToken, mediaId, resId, ReservationStatus.DENIED);
+        reservationService.denyReservation(mediaToken, mediaId, resId, details);
 
         assertEquals(ReservationStatus.DENIED, reservation.getStatus());
         verify(reservationRepository).save(reservation);
